# whimsyhollow

./: .gcloudignore  .gitignore  LICENSE  Makefile  README.md
.github/actions/terraform/: action.yml
.github/workflows/: app-ci.yml  terraform-cicd-per-stack.yml  terraform-cicd-stack-webapp.yml
backend/: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  pyproject.toml
backend/src/whimsyhollow/: __init__.py  config.py  identity.py  logging_setup.py  main.py
backend/src/whimsyhollow/api/: auth.py
backend/src/whimsyhollow/api/routes/: health.py
backend/tests/: conftest.py  test_health.py  test_identity.py  test_me.py  test_spa.py
docs/retro/: tf-ar-cyclic-dependency.md  tf-diagrams.md
e2e/: Makefile  README.md  package.json  playwright.config.ts
e2e/tests/: mobile-layout.spec.ts  navigation.spec.ts  shell.spec.ts
e2e/tests/helpers/: mobile.ts
frontend/: Makefile  biome.json  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/brandpacks/default-v2ai/: brand.json
frontend/brandpacks/default-v2ai/tokens/: core.tokens.json  dark.tokens.json  light.tokens.json
frontend/brandpacks/joshs-karaoke-bar/: brand.json
frontend/brandpacks/joshs-karaoke-bar/tokens/: core.tokens.json  dark.tokens.json  light.tokens.json
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  index.css  main.tsx
frontend/src/components/: Header.test.tsx  Header.tsx  Sidebar.test.tsx  Sidebar.tsx  auth.test.tsx  auth.tsx  brand-provider.test.tsx  brand-provider.tsx  nav-controls.tsx  nav-drawer.tsx  theme-provider.test.tsx  theme-provider.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
frontend/src/lib/: brand-tokens.test.ts  brand-tokens.ts  brands.ts  utils.ts
frontend/src/pages/: About.test.tsx  About.tsx  Home.test.tsx  Home.tsx  Settings.test.tsx  Settings.tsx
frontend/src/test/: server.ts
infra/: .gitignore  .tflint.hcl  AUTH.md  Makefile  README.md  config.yml
infra/bootstrap/: README.md  bootstrap_all.sh  bootstrap_github.sh  bootstrap_project.sh  config.sh
infra/modules/: README.md
infra/stacks/webapp/: .terraform.lock.hcl  README.md  agent.tf  artifact_registry.tf  backend.tf  bigquery.tf  build.tf  cloudrun.tf  dev.tfvars.example  firestore.tf  iap.tf  main.tf  outputs.tf  prod.tfvars.example  provider.tf  storage.tf  test.tfvars.example  variables.tf
infra/stacks/webapp/backends/: dev.config  prod.config  test.config
infra/tfs/: README.md  pyproject.toml
infra/tfs/scripts/: extract_stencils.py
infra/tfs/src/tfs/: __init__.py  _terraform.py  app.py  backends.py  config.py  errors.py  gcp.py  logging_setup.py  roots.py
infra/tfs/src/tfs/assets/: NOTICE
infra/tfs/src/tfs/commands/: __init__.py  create.py  diagram.py  gha.py  terraform.py  validate.py
infra/tfs/src/tfs/diagrams/: __init__.py  command.py  drawio_model.py  layout.py  plan_model.py  publish.py  raster.py  readme.py  registry.py  stencils.py  svg_render.py
infra/tfs/src/tfs/templates/: README.md.j2  backend.tf  main.tf  provider.tf  variables.tf
infra/tfs/src/tfs/templates/backends/: base.config.j2
infra/tfs/src/tfs/templates/workflows/: terraform-cicd-stack-STACKNAME.yml.j2
infra/tfs/tests/: test_commands.py  test_diagrams.py  test_publish.py  test_terraform_driver.py  test_tfs.py  test_validate.py
infra/tfs/tests/fixtures/: plan.json
