[project]
name = "tfs"
version = "0.1.0"
description = "Terraform stack lifecycle CLI for the whimsyhollow infra/ (stacks + modules layout, GCS backend)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.5",
    "ruamel-yaml>=0.18.10",
    # `tfs diagram` renders its own SVG from vendored draw.io stencils, then
    # rasterizes to PNG via cairosvg. cairosvg needs the system cairo library at
    # render time: brew install cairo / apt-get install libcairo2.
    "cairosvg>=2.9.0",
]

[project.scripts]
tfs = "tfs.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# src-layout: the importable package is src/tfs. Hatchling ships every file under
# it — including the non-.py scaffolding templates in src/tfs/templates/ — into the
# wheel, so `tfs create` can read them via importlib.resources after install.
[tool.hatch.build.targets.wheel]
packages = ["src/tfs"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
# No whole-file omits. Every module is measured. Genuine IO seams — the exact
# subprocess/cairo/gh call sites that can't run without live terraform/gcloud/cairo
# — are marked inline with `# pragma: no cover` (visible at the seam, with a reason),
# never hidden behind a config exclusion. Everything else is unit-tested.

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_also = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]

[tool.mypy]
strict = true
files = ["src"]
mypy_path = ["src"]

# Untyped third-party libs.
[[tool.mypy.overrides]]
module = ["cairosvg.*", "ruamel.*", "jinja2.*"]
ignore_missing_imports = true

# cmd_* handlers read argparse.Namespace attributes (dynamically typed), so strict
# attribute checks are relaxed for those thin handler modules only. Everything else —
# including the pure publish/terraform/_terraform logic — is strict-typed.
[[tool.mypy.overrides]]
module = ["tfs.diagrams.command", "tfs.commands.terraform"]
ignore_errors = true
